# cometblue-control

./: .gitignore  LICENSE  README.md  install-linux.sh  install-macos.sh  install-raspberry.sh  install.sh  pyproject.toml  uninstall.sh
cometblue/: __init__.py  auto_trigger.py  cli.py  config.py  database.py  device.py  discovery.py  profiles.py  protocol.py  scheduler.py
cometblue/api/: app.py  models.py
cometblue/api/routes/: auto_triggers.py  devices.py  discovery.py  history.py  holidays.py  presets.py  profiles.py  schedules.py  settings.py  temperatures.py
cometblue/mcp/: server.py
config/: config.yaml
config/profiles/: aus.yaml  holiday.yaml  spring.yaml  summer.yaml  weekday.yaml  weekend.yaml  winter.yaml
deploy/: cometblue-mcp.service.j2  cometblue.service.j2  deploy.yml  inventory.ini
docs/: api.md  mcp.md
systemd/: cometblue.service
ui/: index.html
